data/derived/comb/progs/unify/prog7716.ml.out
Characters 298-313:
  removeZero (add ((padZero l1 l2) (if l1 > l2 then l1 else l2)));;
                   ^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
